<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_pictures">"所有图片"</string>
    <string name="app_name">Cycling</string>
    <string name="add_photo">"添加图片"</string>
    <string name="add_contact">"加为好友"</string>
    <string name="ask_buy">"求购"</string>
    <string name="back">"返回"</string>
    <string name="bike_all_sell">"整车出售"</string>
    <string name="bike_parts_sell">"散件出售"</string>
    <string name="commodity_name">"*商品名称:"</string>
    <string name="commodity_description">"*商品描述:"</string>
    <string name="commodity_description_hint">"请填写商品的具体情况，最多填写140个字&#8230;"</string>
    <string name="confirm">"确认"</string>
    <string name="confirm_pwd_wrong">"两次密码不相同"</string>
    <string name="contacts">"联系方式:"</string>
    <string name="contacts_description">"请填写手机号码，可选填"</string>
    
    <string name="deal_type">"*交易类型:"</string>
    <string name="description">"描诉:"</string>
    
    <string name="empty_registe_info">"注册信息不能为空"</string>
    <string name="fragment0">Fragment0</string>
    <string name="fragment1">Fragment1</string>
    <string name="fragment2">Fragment2</string>
    <string name="fragment3">Fragment3</string>
    <string name="fragment4">Fragment4</string>
    
    <string name="indicator_title_index0">"掏二手"</string>
    <string name="indicator_title_index1">"消息"</string>
    <string name="indicator_title_index2">"周边"</string>
    <string name="indicator_title_index3">"联系人"</string>
    <string name="indicator_title_index4">"设置"</string>
    
    <string name="information_editor">"资料编辑"</string>
    
    <string name="input_message">"请输入发送消息!"</string>
    <string name="input_email">"请输入邮箱&#8230;"</string>
    <string name="input_name_alias">"请输入用户昵称&#8230;"</string>
    <string name="input_login_passward">"请输入登录密码&#8230;"</string>
    <string name="input_login_passward_again">"请再次输入登录密码&#8230;"</string>
    
    <string name="issue">"发布交易"</string>
    <string name="limit_char_count">"最多50个字&#8230;"</string>
    <string name="limit_picture_select_max_count">"只能选择6张图片"</string>
    <string name="loading">""加载中"</string>
    <string name="login">"登录"</string>
    <string name="my_photo">"个性相册"</string>
    <string name="no_issue_description">"商品描诉不能为空"</string>
    <string name="no_issue_level">"新旧程度不能为空"</string>
    <string name="no_issue_name">"名称不能为空"</string>
    <string name="no_issue_price">"价格不能为空"</string>
    <string name="no_issue">"无二手信息"</string>
    <string name="no_network">"无网络"</string>
    <string name="pictures_selected"><xliff:g id="count">%1$d</xliff:g>"张"</string>
    <string name="picture_unable_select">"该图片不能被选择"</string>
    
    <string name="old_level">"*新旧程度:"</string>
    <string name="old_level_label">"新旧程度:"</string>
    <string name="old_level_description">"几成新/使用多少公里&#8230;"</string>
    <string name="price">"*商品价格:"</string>
    <string name="price_label">"商品价格:"</string>
    <string name="picture">"图片"</string>
    <string name="registe">"注册"</string>
    <string name="sending">"发送中&#8230;"</string>
    <string name="tips">"提示"</string>
    <string name="type_all">"[整车出售]"</string>
    <string name="type_parts">"[散件出售]"</string>
    <string name="type_buy">"[求购]"</string>
    
    <!-- Bmob about -->
    <string name="xlistview_header_hint_normal">"下拉刷新"</string>
    <string name="xlistview_header_hint_ready">"松开刷新数据"</string>
    <string name="xlistview_header_hint_loading">"正在加载&#8230;"</string>
    <string name="xlistview_header_last_time">"上次更新时间："</string>
    <string name="xlistview_footer_hint_normal">"查看更多"</string>
    <string name="xlistview_footer_hint_ready">"松开载入更多"</string>
    <string name="bmob_message_search_hint">"搜索&#8230;"</string>
    <string name="bmob_new_friends">"新朋友"</string>
    <string name="bmob_near_people">"附近的人"</string>
    <string name="bmob_location">"[位置]"<xliff:g id="address">%1$s</xliff:g></string>
    <string name="bmob_voice">"[语音]"</string>
    <string name="bmob_chat_with_who">"与"<xliff:g id="who">%1$s</xliff:g>"对话"</string>
    <string name="bmob_voice_up_tips">"手指上滑,取消发送"</string>
    <string name="bmob_longclick_speak">长按说话</string>
    <string name="bmob_camera">拍摄</string>
    <string name="location">位置</string>
    
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_short_tips">录音时间太短</string>
    <!-- end -->
    
    <string name="upload_photo">"上传图片:"</string>
    <string name="user_edit">"用户资料编辑:"</string>
    
</resources>

