<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <com.android.cycling.widget.HeaderLayout
            android:id="@+id/header_layout"
            style="@style/HeaderLayout"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal"
            android:paddingLeft="6dip"
            android:paddingRight="6dip" >

            <TextView
                style="@style/EditorActivityTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4.5dip"
                android:text="@string/commodity_name" />

            <EditText
                android:id="@+id/name"
                style="@style/EditorActivityEditTextStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="4dip"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="@string/limit_char_count" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal"
            android:paddingLeft="6dip"
            android:paddingRight="6dip" >

            <TextView
                style="@style/EditorActivityTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/deal_type" />

            <com.android.cycling.widget.MultiCheck
                android:id="@+id/type"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal"
            android:paddingLeft="6dip"
            android:paddingRight="6dip" >

            <TextView
                style="@style/EditorActivityTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/old_level" />

            <EditText
                android:id="@+id/level"
                style="@style/EditorActivityEditTextStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:layout_weight="1"
                android:hint="@string/old_level_description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal"
            android:paddingLeft="6dip"
            android:paddingRight="6dip" >

            <TextView
                style="@style/EditorActivityTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/price" />

            <EditText
                android:id="@+id/price"
                style="@style/EditorActivityEditTextStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:layout_weight="1"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal"
            android:paddingLeft="16.5dip"
            android:paddingRight="6dip" >

            <TextView
                style="@style/EditorActivityTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/contacts" />

            <EditText
                android:id="@+id/phone"
                style="@style/EditorActivityEditTextStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:layout_weight="1"
                android:hint="@string/contacts_description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal"
            android:paddingLeft="16.5dip"
            android:paddingRight="6dip" >

            <TextView
                style="@style/EditorActivityTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dip"
                android:text="@string/upload_photo" />

            <com.android.cycling.widget.SimpleGridView
                android:id="@+id/pictureList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:cacheColorHint="@android:color/transparent"
                android:gravity="center"
                android:horizontalSpacing="3dip"
                android:listSelector="@android:color/transparent"
                android:numColumns="3"
                android:stretchMode="columnWidth"
                android:verticalSpacing="3dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal"
            android:paddingLeft="6dip"
            android:paddingRight="6dip" 
            android:paddingBottom="6dip">

            <TextView
                style="@style/EditorActivityTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4.5dip"
                android:text="@string/commodity_description" />

            <EditText
                android:id="@+id/description"
                style="@style/EditorActivityEditTextStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="4dip"
                android:layout_weight="1"
                android:gravity="top|left"
                android:hint="@string/commodity_description_hint" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
