<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
    
    <include 
        layout="@layout/registe_layout_header"/>
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="40dip"
        android:contentDescription="@null"
        android:src="@drawable/registe_activity_photo"
        />
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dip"
        >

        <ImageView
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dip"
            android:contentDescription="@null"
            android:src="@drawable/male_sex_2"
            android:clickable="true"
            />
        
        <ImageView
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dip"
            android:contentDescription="@null"
            android:src="@drawable/female_sex_1"
            android:clickable="true"
            />

    </RelativeLayout>
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:contentDescription="@null"
        android:src="@drawable/registe_activity_divide" 
        />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dip"
            android:paddingBottom="15dip"
            android:hint="@string/input_email"
            />

    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dip"
            android:paddingBottom="15dip"
            android:hint="@string/input_name_alias"
            />

    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dip"
            android:paddingBottom="15dip"
            android:hint="@string/input_login_passward"
            />

    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
        <EditText
            android:id="@+id/pwdConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dip"
            android:paddingBottom="15dip"
            android:hint="@string/input_login_passward_again"
            />

    </LinearLayout>
    
</LinearLayout>
